# invoke-plugin-for-pylint

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  REUSE.toml  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml  release.yml
.reuse/: dep5
invoke_plugin_for_pylint/: __init__.py  _plugin.py
news/: +3afffb29.feature.md
tests/: test_plugin.py
