[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61",
    "setuptools-scm~=9.2",
]

[project]
authors = [
    {name = "Kai Harder", email = "kai.harder@sap.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "invoke~=2.0",
    "pylint>=3.0,<5",
    "astroid>=3.0,<5",
]
description = "Pylint plugin which disables checks for proper integration with invoke"
dynamic = ["version"]
keywords = [
    "pylint",
    "invoke",
    "plugin",
    "inv",
    "linter",
]
license = "Apache-2.0"
license-files = [
    "LICENSE",
]
name = "invoke-plugin-for-pylint"
readme = "README.md"
requires-python = ">=3.10,<4"

[project.urls]
Changelog = "https://github.com/SAP/invoke-plugin-for-pylint/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/SAP/invoke-plugin-for-pylint/issues"

[dependency-groups]
dev = [
    "pre-commit==4.4.0",
    "pylint==4.0.4",
    "pylint-per-file-ignores==3.1.0",
    "black==25.11.0",
    "isort==7.0.0",
    "mypy==1.18.2",
    "types-invoke==2.0.0.10",
    "flake8==7.3.0",
    "flake8-tergeo==25.10.9.0",
    "yesqa==1.5.0",
    "pyupgrade==3.21.2",
    "toml-sort==0.24.3",
    "uv==0.9.10",
    "towncrier==25.8.0",
]
test = [
    "pytest==9.0.0",
    "pytest-mock==3.15.1",
    "coverage[toml]==7.13.0",
    "diff-cover==9.7.2",
    "pytest-cov==7.0.0",
    "pytest-randomly==4.0.1",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true

[tool.diff_cover]
fail_under = 90
include_untracked = true

[tool.isort]
add_imports = [
    "from __future__ import annotations",
]
profile = "black"

[tool.mypy]
disable_error_code = [
    "type-abstract",
]
disallow_untyped_calls = false
enable_error_code = [
    "explicit-override",
    "possibly-undefined",
    "ignore-without-code",
    "deprecated",
    "redundant-self",
    "truthy-iterable",
    "unused-awaitable",
    "exhaustive-match",
]
pretty = true
show_column_numbers = true
show_error_codes = true
show_traceback = true
strict = true
strict_bytes = true
strict_concatenate = true
strict_equality_for_none = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_return_any = false
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "astroid.*",
]

[tool.pylint.basic]
no-docstring-rgx = "^_"

[tool.pylint.design]
min-public-methods = 0

[tool.pylint.master]
load-plugins = [
    "invoke_plugin_for_pylint",
    "pylint_per_file_ignores",
    "pylint.extensions.bad_builtin",
    "pylint.extensions.check_elif",
    "pylint.extensions.code_style",
    "pylint.extensions.comparison_placement",
    "pylint.extensions.confusing_elif",
    "pylint.extensions.dict_init_mutate",
    "pylint.extensions.docparams",
    "pylint.extensions.docstyle",
    "pylint.extensions.empty_comment",
    "pylint.extensions.eq_without_hash",
    "pylint.extensions.for_any_all",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.private_import",
    "pylint.extensions.set_membership",
    "pylint.extensions.typing",
]
max-line-length = 100
py-version = "3.10"

[tool.pylint."messages control"]
disable = [
    "fixme",
    "locally-disabled",
    "suppressed-message",
]
enable = ["all"]
per-file-ignores = "tests/**:missing-function-docstring,missing-class-docstring,redefined-outer-name,protected-access,unused-argument,import-private-name"

[tool.pylint.reports]
reports = false

[tool.pylint.similarities]
ignore-imports = true

[tool.setuptools.package-data]
invoke_plugin_for_pylint = [
    "py.typed",
]

[tool.setuptools.packages.find]
include = [
    "invoke_plugin_for_pylint",
]

[tool.setuptools_scm]
version_file = ""

[tool.tomlsort]
sort_first = [
    "build-system",
    "project",
    "project.urls",
    "dependency-groups",
]
sort_table_keys = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true

[tool.towncrier]
directory = "news"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## {version} ({project_date})"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "removal"
name = "Removals"

[[tool.towncrier.type]]
directory = "deprecation"
name = "Deprecations"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"

[[tool.towncrier.type]]
directory = "change"
name = "Changes"

[[tool.towncrier.type]]
directory = "fix"
name = "Fixes"

[tool.uv]
default-groups = []
